[tool.poetry]
name = "lidipy"
version = "0.1.0"
description = "Lidi is a lightweight dependency injector designed to simplify dependency management in your Python projects."
authors = ["AlTosterino <altosterino@gmail.com>"]
readme = "README.md"
packages = [{include = "lidipy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
pytest = "^7.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# THIRD PARTY
[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "I", "PL"]
line-length = 100
target-version = "py311"