[tool.poetry]
name = "lidipy"
version = "0.3.1"
description = "Lidi is a lightweight dependency injector designed to simplify dependency management in your Python projects."
authors = ["AlTosterino <altosterino@gmail.com>"]
readme = "README.md"
packages = [{include = "lidipy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[tool.poetry.group.dev.dependencies]
ruff = "~0"
black = "~24"
pytest = "~8"
mypy = "~1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# THIRD PARTY
[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "N", "S", "B", "A", "TD", "FIX", "PERF", "PT"]
ignore = ["D107", "D203", "D211"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"**/{tests,docs,tools}/**" = ["D100", "D101", "D103", "S101"]
